# yt-dlp-modern-gui

./: .gitignore  CHANGELOG.md  Claude.md  README.md  package.json
.github/workflows/: build-release.yml  ci.yml
.husky/: pre-commit
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.vi.md  README.zh-CN.md  README.zh-TW.md
docs/plans/: 2026-02-02-sprite-sheet-describer-design.md  2026-02-02-sprite-sheet-describer.md
specs/002-yt-dlp-gui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-yt-dlp-gui/checklists/: requirements.md
specs/002-yt-dlp-gui/contracts/: tauri-commands.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/modules/: logger.rs  types.rs
src-tauri/src/ytdlp/: binary.rs  commands.rs  db.rs  dep_deno.rs  dep_download.rs  dep_ffmpeg.rs  dep_ytdlp.rs  download.rs  metadata.rs  mod.rs  progress.rs  settings.rs  types.rs
src-tauri/src/ytdlp/binary/: dep_check.rs  mod.rs  path.rs  resolve.rs
src-tauri/src/ytdlp/commands/: dependency.rs  history.rs  misc.rs  mod.rs  queue.rs  settings_cmd.rs
src-tauri/src/ytdlp/db/: history.rs  mod.rs  queue.rs
src-tauri/src/ytdlp/download/: commands.rs  executor.rs  manager.rs  mod.rs
src-tauri/src/ytdlp/metadata/: fetch.rs  mod.rs  validation.rs
src/lib/: bindings.ts  types.ts
src/lib/i18n/locales/: de.ts  en.ts  fr.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
src/lib/theme/: index.svelte.ts  themes.ts
src/lib/utils/: errors.ts  format.ts
src/routes/: +page.svelte
src/routes/tools/ytdlp/: +layout.svelte  +page.svelte
src/routes/tools/ytdlp/history/: +page.svelte
src/routes/tools/ytdlp/queue/: +page.svelte
src/routes/tools/ytdlp/settings/: +layout.svelte  +page.svelte
src/routes/tools/ytdlp/settings/dependencies/: +page.svelte
workflows/: release.yml
